# ShoGun-Price-Fetcher

./: .dockerignore  .gitignore  Cargo.toml  README.md  config.example.toml
docker/: docker-compose.yaml
docker/fetcher/: Dockerfile
docker/grafana/: .env.grafana  datasources.yml  tempo.yml
docker/opentelemetry/: otel-config.yaml
docker/prometheus/: prometheus.yml
lib/: Cargo.toml
lib/src/: error.rs
scripts/: entry.sh
service/: Cargo.toml
service/src/: lib.rs  services.rs
service/src/asset/: mod.rs
service/src/asset/price/: mod.rs  price_provider.rs
service/src/asset/price/providers/: defillama.rs  mod.rs
service/src/config/: mod.rs
service/src/telemetry/: logs.rs  metrics.rs  mod.rs  traces.rs
src/: cli.rs  main.rs
