[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../lib" }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-stdout = { workspace = true }
tracing = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
buildstructor = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
rust_decimal = { workspace = true }
futures = { workspace =  true }
futures-util = { workspace = true }
reqwest = { workspace = true }